--- a/assets/layout/footer.html
+++ b/assets/layout/footer.html
@@ -27,9 +27,15 @@
       <div class="footer-links">
         <h4>Company</h4>
         <ul>
-          <li><a href="#">About</a></li>
-          <li><a href="https://github.com/Kvoryz/KvoLib">GitHub</a></li>
-          <li><a href="#">Twitter</a></li>
+          <li><a href="https://kvorys.vercel.app" target="_blank">About</a></li>
+          <li>
+            <a href="https://github.com/Kvoryz" target="_blank">GitHub</a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/_kvory" target="_blank"
+              >Instagram</a
+            >
+          </li>
         </ul>
       </div>
     </div>
