--- a/assets/layout/navbar.html
+++ b/assets/layout/navbar.html
@@ -19,11 +19,7 @@
       <a href="/" class="nav-link">Home</a>
       <a href="/components.html" class="nav-link">Components</a>
       <a href="/template.html" class="nav-link">Templates</a>
-      <a
-        href="https://github.com/Kvoryz/KvoLib"
-        target="_blank"
-        class="nav-link"
-      >
+      <a href="changelog.html" class="nav-link">
         <i class="fab fa-github"></i>
       </a>
     </div>
